# Fystan

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  _headers  agents.md  basic_features_direct.rs  basic_features_test.fys  complex_test.fys  complex_test_v2.fys  complex_working_test.fys  comprehensive_test.fys  comprehensive_test.rs  hello_world  hello_world.fys  hello_world_new.rs  index.html  simple_complex_test.fys  simple_test.fys  simple_test.rs  test  test.fys  test_executable  test_output.rs  test_python_syntax.fys
downloads/: FystanLinux
src/: ctmm.rs  lib.rs  main.rs  target.rs
src/ast/: mod.rs
src/builtins/: mod.rs
src/codegen/: compiler.rs  generator.rs  mod.rs
src/interpreter/: evaluator.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/transpiler/: aot.rs  bytecode_generator.rs  compiler.rs  context.rs  expressions.rs  jit.rs  mod.rs  rust_generator.rs  scope.rs  statements.rs  string_allocator.rs  vm.rs
tests/: complex_factorial  complex_factorial.fys  comprehensive_global.fys  comprehensive_test.fys  comprehensive_while.fys  debug1.fys  debug2.fys  debug3.fys  debug4.fys  factorial_return.fys  simple_func.fys
